# TinyLogger

./: CMakeLists.txt  main.cpp
src/: .main.cpp.swp  main.cpp  price_fetcher.cpp  price_fetcher.h  shared_prices.cpp  shared_prices.h  thread_pool.cpp  thread_pool.h
